# monkeylib

./: CMakeLists.txt  README.md
include/: environment.hpp  idplatform.hpp
libmonkey/: CMakeLists.txt  libmonkey.cpp  libmonkey.h
unittest/: CMakeLists.txt  environment_test.cpp
